Stripped require_once, now uses autoloader

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,12 @@
     "authors": [
     ],
 
+    "autoload": {
+        "psr-0": {
+            "Hamcrest": "hamcrest"
+        }
+    },
+
     "require": {
         "php":          ">=5.3.2"
     }
