--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
 	},
 
 	"require-dev": {
-		"satooshi/php-coveralls": "dev-master"
+		"satooshi/php-coveralls": "dev-master",
+		"phpunit/php-file-iterator": "1.3.3"
 	}
 }
