remove PEAR instructions from README and improve travis and fix typos

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ php:
   - 5.4
   - 5.3
 
-before_script:
-  - composer install --dev
+install:
+  - composer install
 
 script:
   - mkdir -p build/logs
