--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
 	},
 
 	"require-dev": {
+		"phpunit/phpunit": "~4.4",
 		"satooshi/php-coveralls": "dev-master",
 		"phpunit/php-file-iterator": "1.3.3"
 	},
