rerun travis to send clover data to coveralls and to scrutinizer

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ script:
   - mkdir -p build/logs
   - cd tests
   - phpunit --coverage-clover=../build/logs/clover.xml .
-  - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --format=php-clover ../build/logs/clover.xml
   - cd ../
 
 after_script:
-  - php vendor/bin/coveralls
+  - php vendor/bin/coveralls -v
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
