--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,23 @@
 language: php
 php:
+  - 5.6
+  - 5.5
   - 5.4
   - 5.3
+  - hhvm
+  - 7.0
+
+matrix:
+  allow_failures:
+    - php: hhvm
+    - php: 7.0
 
 install:
   - composer install
 
 script:
   - mkdir -p build/logs
-  - cd tests
-  - phpunit --coverage-clover=../build/logs/clover.xml .
-  - cd ../
+  - php vendor/bin/phpunit --coverage-clover=build/logs/clover.xml tests
 
 after_script:
   - php vendor/bin/coveralls -v
