Use stable version of "satooshi/php-coveralls" library to make PHP 5.4- builds work again

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
 	},
 
 	"require-dev": {
-		"satooshi/php-coveralls": "dev-master",
+		"satooshi/php-coveralls": "^1.0",
 		"phpunit/php-file-iterator": "1.3.3",
 		"phpunit/phpunit": "~4.0"
 	},
