--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
 
 	"require-dev": {
 		"satooshi/php-coveralls": "^1.0",
-		"phpunit/php-file-iterator": "1.3.3",
-		"phpunit/phpunit": "~4.0"
+		"phpunit/php-file-iterator": "^1.4",
+		"phpunit/phpunit": "^4.8.35"
 	},
 
 	"replace": {
