--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
 	"require-dev": {
 		"satooshi/php-coveralls": "^1.0",
 		"phpunit/php-file-iterator": "^1.4",
-		"phpunit/phpunit": "^4.8.35"
+		"phpunit/phpunit": ">=4.8.35 <5|>=5.4.3 <6"
 	},
 
 	"replace": {
