Rewrite Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,34 @@
 language: php
+
+dist: trusty
+sudo: false
+
 php:
-  - 5.6
-  - 5.5
   - 5.4
-  - 5.3
-  - hhvm
+  - 5.5
+  - 5.6
   - 7.0
+  - 7.1
+  - nightly
+  - hhvm
+  - hhvm-nightly
 
 matrix:
+  include:
+    - php: 5.3
+      dist: precise
   allow_failures:
     - php: hhvm
+    - php: hhvm-nightly
 
 install:
   - composer update --prefer-source
 
 script:
   - mkdir -p build/logs
-  - php vendor/bin/phpunit --coverage-clover=build/logs/clover.xml -c tests/phpunit.xml.dist
+  - vendor/bin/phpunit --coverage-clover=build/logs/clover.xml -c tests/phpunit.xml.dist
 
 after_script:
-  - php vendor/bin/coveralls -v
+  - vendor/bin/coveralls -v
   - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
+  - ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
