--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,23 @@
 language: php
 
+dist: trusty
+
 matrix:
   include:
-    - php: 5.3
+    - name: PHP 5.3
+      php: 5.3
       dist: precise
-    - php: 5.4
-      dist: trusty
-    - php: 5.5
-      dist: trusty
-    - php: 5.6
-      dist: xenial
-    - php: 7.0
-      dist: xenial
-    - php: 7.1
-      dist: bionic
-    - php: 7.2
-      dist: bionic
-    - php: 7.3
-      dist: bionic
-    - php: 7.4
-      dist: bionic
-    - php: hhvm-3.18
-      dist: trusty
+    - name: PHP 5.4
+      php: 5.4
+    - name: PHP 5.5
+      php: 5.5
+    - name: PHP 5.6
+      php: 5.6
+    - name: HHVM 3.18
+      php: hhvm-3.18
 
 install:
-  - travis_retry composer update
+  - travis_retry composer update --prefer-dist --no-progress
 
 script:
   - mkdir -p build/logs
