--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,4 @@ install:
 
 script:
   - mkdir -p build/logs
-  - vendor/bin/phpunit --coverage-clover=build/logs/clover.xml -c tests/phpunit.xml.dist
-
-after_script:
-  - vendor/bin/coveralls -v
-  - wget https://scrutinizer-ci.com/ocular.phar
-  - ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
+  - vendor/bin/phpunit -c tests/phpunit.xml.dist
