--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 	},
 
 	"require-dev": {
-		"phpunit/php-file-iterator": "^1.1",
+		"phpunit/php-file-iterator": "^1.4 || ^2.0",
 		"phpunit/phpunit": "^4.8.36 || ^5.7 || ^6.5 || ^7.0"
 	},
 
