--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@
 /.github export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
+.coveralls.yml export-ignore
 .gush.yml export-ignore
 .travis.yml export-ignore
 phpunit.xml.dist export-ignore
