--- a/tests/phpunit.xml.dist
+++ b/tests/phpunit.xml.dist
@@ -6,7 +6,8 @@
          convertNoticesToExceptions="true"
          convertWarningsToExceptions="true"
          processIsolation="false"
-         stopOnFailure="false">
+         stopOnFailure="false"
+         beStrictAboutTestsThatDoNotTestAnything="false">
   <testsuites>
     <testsuite name="hamcrest-php">
       <directory suffix="Test.php">.</directory>
