--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,13 +26,8 @@ jobs:
           tools: composer:v2
           coverage: none
 
-      - name: Install PHP 7 dependencies
+      - name: Install PHP dependencies
         run: composer update --prefer-dist --no-interaction --no-progress
-        if: "matrix.php != '8.0'"
-
-      - name: Install PHP 8 dependencies
-        run: composer update --prefer-dist --no-interaction --no-progress --ignore-platform-reqs
-        if: "matrix.php == '8.0'"
 
       - name: Execute tests
         run: vendor/bin/phpunit -c tests/phpunit.xml.dist
