Add missing php extensions to the composer.json

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
 	},
 
 	"require": {
-		"php": "^7.4|^8.0"
+		"php": "^7.4|^8.0",
+		"ext-ctype": "*",
+		"ext-dom": "*"
 	},
 
 	"require-dev": {
