--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
 
 	"require-dev": {
 		"phpunit/php-file-iterator": "^1.4 || ^2.0 || ^3.0",
-		"phpunit/phpunit": "^4.8.36 || ^5.7 || ^6.5 || ^7.0 || ^8.0 || ^9.0"
+		"phpunit/phpunit": "^4.8.36 || ^5.7 || ^6.5 || ^7.0 || ^8.0 || ^9.0",
+		"friendsofphp/php-cs-fixer": "^3.75"
 	},
 
 	"replace": {
