run only on php 8.0

--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -8,17 +8,6 @@ jobs:
   static_analysis:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        php:
-          - '7.4'
-          - '8.0'
-          - '8.1'
-          - '8.2'
-          - '8.3'
-          - '8.4'
-
-    name: PHP ${{ matrix.php }}
 
     steps:
       - name: Checkout code
@@ -27,7 +16,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php }}
+          php-version: '8.0'
           extensions: curl
           tools: composer:v2
           coverage: none
