--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,34 @@
-name: tests
+name: ci
 
 on:
   push:
   pull_request:
 
 jobs:
-  tests:
+  static_analysis:
+    name: Static analysis
+    runs-on: ubuntu-latest
 
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.0'
+          extensions: curl
+          tools: composer:v2
+          coverage: none
+
+      - name: Install PHP dependencies
+        run: composer update --prefer-dist --no-interaction --no-progress
+
+      - name: Run PHPStan
+        run: vendor/bin/phpstan analyze
+
+  tests:
+    name: Tests ${{ matrix.php }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -17,8 +39,6 @@ jobs:
           - '8.2'
           - '8.3'
           - '8.4'
-
-    name: PHP ${{ matrix.php }}
 
     steps:
       - name: Checkout code
